content/docs/v0.0.1/reference/aws.kubeform.com/DxGatewayAssociationProposal.md
---
title: DxGatewayAssociationProposal
menu:
  docs_v0.0.1:
    identifier: dxgatewayassociationproposal-aws.kubeform.com
    name: DxGatewayAssociationProposal
    parent: aws.kubeform.com-reference
    weight: 1
menu_name: docs_v0.0.1
section_menu_id: reference
info:
  version: v0.0.1
---

## DxGatewayAssociationProposal
| Field | Type | Description |
| ------ | ----- | ----------- |
| `apiVersion` | string | `aws.kubeform.com/v1alpha1` |
|    `kind` | string | `DxGatewayAssociationProposal` |
| `metadata` | ***[Kubernetes meta/v1.ObjectMeta](https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.13/#objectmeta-v1-meta)***|Refer to the Kubernetes API documentation for the fields of the `metadata` field.|
| `spec` | ***[DxGatewayAssociationProposalSpec](#DxGatewayAssociationProposalSpec)***||
| `status` | ***[DxGatewayAssociationProposalStatus](#DxGatewayAssociationProposalStatus)***||
## DxGatewayAssociationProposalSpec
##### (Appears on:[DxGatewayAssociationProposal](#DxGatewayAssociationProposal), [DxGatewayAssociationProposalStatus](#DxGatewayAssociationProposalStatus))
| Field | Type | Description |
| ------ | ----- | ----------- |
| `providerRef` | ***[Kubernetes core/v1.LocalObjectReference](https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.13/#localobjectreference-v1-core)***||
| `id` | ***string***||
| `allowedPrefixes` | ***[]string***| ***(Optional)*** |
| `dxGatewayID` | ***string***||
| `dxGatewayOwnerAccountID` | ***string***||
| `vpnGatewayID` | ***string***||
## DxGatewayAssociationProposalStatus
##### (Appears on:[DxGatewayAssociationProposal](#DxGatewayAssociationProposal))
| Field | Type | Description |
| ------ | ----- | ----------- |
| `observedGeneration` | ***int64***| ***(Optional)*** Resource generation, which is updated on mutation by the API Server.|
| `output` | ***[DxGatewayAssociationProposalSpec](#DxGatewayAssociationProposalSpec)***| ***(Optional)*** |
| `state` | ***kubeform.dev/kubeform/apis.State***| ***(Optional)*** |
---
